--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body class="body js-body">
     <header>
-        <h1 class="header__title">Kamil Adach - future frontend developer</h1>
+        <h1 class="header__title">Kamil Adach - frontend developer</h1>
     </header>
     <nav class="navigation">
         <ul class="navigation__list">
