button js class changed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <section class="section section--noBorder">
             <p>
-                <button class="section__button js-button">Zmień kolor tła na <span class=" js-themeName">ciemny</span> </button>
+                <button class="section__button js-changeBackgroundColorButton">Zmień kolor tła na <span class=" js-anotherThemeName">jasny</span> </button>
             </p>
             <p>
                 <img class="section__myPhoto" src="images/IMG20220511135451.jpg"
