link, classess added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="css/navigation.css" rel="stylesheet">
     <link href="css/section.css" rel="stylesheet">
     <link rel="stylesheet" href="css/table.css">
+    <link rel="stylesheet" href="css/flex.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
@@ -45,28 +46,30 @@
                     alt="Zdjęcie uśmiechniętego Kamila Adacha w czarnym golfie i okularach.">
             </p>
         </section>
-        <section class="section" id="O-mnie">
-            <h2 class="section__header">O mnie</h2>
-            <p>Jestem absolwentem kierunku Globalny Biznes w Szkole Głównej Handlowej w Warszawie. <br> Pozytywne
-                nastawienie do świata i ludzi powoduje, że chętnie uczę się nowych
-                rzeczy i jestem otwarty na różne doświadczenia. Swoje obowiązki
-                wykonuję <em>bardzo</em> sumiennie i z zaangażowaniem. Wciąż rozwijam swoje umiejętności oraz stale
-                zdobywam wiedzę np. z zakresu inwestycji giełdowych oraz zarządzania finansami. <br>
-                Posługuję się językiem
-                <b>angielskim</b> w stopniu
-                zaawansowanym oraz <b>niemieckim</b> i <b>hiszpańskim</b> na poziomie
-                podstawowym. Żyję w przekonaniu iż umiejętności miękkie oraz językowe są dzisiaj
-                jednymi z kluczowych atutów na rynku pracy.
-            </p>
-        </section>
-        <section class="section" id="Edukacja">
-            <h2 class="section__header">Edukacja</h2>
-            <p>Szkoła Muzyczna im. Karola Lipińskiego w Lublinie - specjalizacje: <i>Instrumenty perkusyjne,
-                    Fortepian</i>
-            </p>
-            <p>Szkoła Główna Handlowa w Warszawie - Licencjat na kierunku <i>Globalny Biznes</i> </p>
-            <p>Katolicki Uniwersytet Lubelski - rok nauki na kierunku <i>Hispanistyka</i></p>
-        </section>
+        <div class="flex">
+            <section class="section flex__item" id="O-mnie">
+                <h2 class="section__header">O mnie</h2>
+                <p>Jestem absolwentem kierunku Globalny Biznes w Szkole Głównej Handlowej w Warszawie. <br> Pozytywne
+                    nastawienie do świata i ludzi powoduje, że chętnie uczę się nowych
+                    rzeczy i jestem otwarty na różne doświadczenia. Swoje obowiązki
+                    wykonuję <em>bardzo</em> sumiennie i z zaangażowaniem. Wciąż rozwijam swoje umiejętności oraz stale
+                    zdobywam wiedzę np. z zakresu inwestycji giełdowych oraz zarządzania finansami. <br>
+                    Posługuję się językiem
+                    <b>angielskim</b> w stopniu
+                    zaawansowanym oraz <b>niemieckim</b> i <b>hiszpańskim</b> na poziomie
+                    podstawowym. Żyję w przekonaniu iż umiejętności miękkie oraz językowe są dzisiaj
+                    jednymi z kluczowych atutów na rynku pracy.
+                </p>
+            </section>
+            <section class="section flex__item" id="Edukacja">
+                <h2 class="section__header">Edukacja</h2>
+                <p>Szkoła Muzyczna im. Karola Lipińskiego w Lublinie - specjalizacje: <i>Instrumenty perkusyjne,
+                        Fortepian</i>
+                </p>
+                <p>Szkoła Główna Handlowa w Warszawie - Licencjat na kierunku <i>Globalny Biznes</i> </p>
+                <p>Katolicki Uniwersytet Lubelski - rok nauki na kierunku <i>Hispanistyka</i></p>
+            </section>
+        </div>
         <section class="section" id="Zainteresowania">
             <h2 class="section__header">Zainteresowania</h2>
             <p>Interesuje mnie gotowanie, finanse, języki obce, gospodarka, filmy, programowanie, granie na
